fix:about us image

--- a/templates/home/about_us.html
+++ b/templates/home/about_us.html
@@ -9,8 +9,8 @@
     <div class="container py-5">
         <h1 class="section-about-title pe-3 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666">Us</span> </h1>
         <div class="row g-5 align-items-center justify-content-center">
-			<div class="col-sm-4">
-				<img src="{{about_details.image.url}}" class="img-fluid w-10 h-10" alt="">
+			<div class="col-sm-12">
+				<img src="{{about_details.image.url}}" width="100%" height="auto" class="img-fluid" alt="">
 			</div>
 			<div class="col-sm-12"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
