--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -17,8 +17,28 @@
         font-size: 1rem; 
     }
 }
+.carousel-car .item img:hover{
+    cursor:pointer;
+}
 
 </style>
+<div class="modal fade bd-example-modal-lg" id="modal-dialog" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div id="image-show" class="modal-body">
+                <div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <section class="ftco-section ftco-no-pt bg-white" style="margin-top:2%">
 	<div class="container">
 		<div class="row">
@@ -30,7 +50,7 @@
             <div class="owl-carousel carousel-car  m-2">
                 {% for image in images %}
                 <div class="item">
-                    <img src="{{image.image.url}}" class="rounded" height="250px" width="100px" class="card-img-top" alt="...">
+                    <img src="{{image.image.url}}" onclick="showImage('{{image.id}}')" class="rounded" height="250px" width="100px" class="card-img-top" alt="...">
                 </div>
                 {% endfor %}
             </div>
@@ -98,4 +118,31 @@
         </div>
 	</div>
 </section>
+<script>
+    function openProjectImageModal() {
+            var imageModal = new bootstrap.Modal(document.getElementById('modal-dialog'));
+            imageModal.show();
+    }
+    function showImage(id){
+        $.ajax({
+            type: 'GET', 
+            url: '/assets/project/image/'+id,
+            success: successFunction
+        });
+        function successFunction(msg) {
+            if (msg.status === 200) {
+                document.getElementById('image-show').innerHTML = ""
+                
+                document.getElementById('image-show').innerHTML += `
+                <img src="${msg.data.image}" width="100%" heigth="auto" class="rounded"/>
+                `
+                openProjectImageModal()
+            }
+        }
+    }
+    function closeModal() {
+        var imageModal = new bootstrap.Modal(document.getElementById('modal-dialog'));
+        imageModal.hide();
+    }
+</script>
 {% endblock content %}
