--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -103,10 +103,27 @@
 		</div>
         {% endif %}
         <div class="row">
-            {% if plot_layout.url %}
+            {% if plot_layouts %}
+            
             <div class="col-sm-12">
                 <h3 class="text text-center project-detail-hover" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Plot Layout</h3>
-                <img src="{{plot_layout.url}}" height="auto" width="100%" alt="">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    {% for plot_layout in plot_layouts %}
+                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                        <img src="{{plot_layout.image.url}}" class="d-block w-100" alt="...">
+                    </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                </div>
             </div>
             {% endif %}
             {% if location %}
