fix:text-centered

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -25,7 +25,7 @@
 		<div class="row g-5 align-items-center">
 			<div class="col-sm-12"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
-				<h1 class="section-about-title pe-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
+				<h1 class="section-about-title pe-3 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
 				<p class="mb-4">Revered as one of the most reliable real estate
@@ -55,8 +55,8 @@
 <section class="ftco-section">
 	<div class="container">
 		<div class="row mb-5">
-			<div class="col-md-7 heading-section ftco-animate">
-				<h2 class="mb-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Our Facilities</h2>
+			<div class="col-md-12 heading-section ftco-animate">
+				<h2 class="mb-3 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Our Facilities</h2>
 			</div>
 		</div>
 		<div class="row h-100">
@@ -144,7 +144,7 @@
 	<div class="container py-5">
 					<div class="row">
 			<div class="col-md-12 heading-section  ftco-animate mb-5">
-				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Properties</h2>
+				<h2 class="mb-2 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Properties</h2>
 			</div>
 		</div>
 		<div class="row g-5 align-items-center">
