--- a/templates/property/property_detail.html
+++ b/templates/property/property_detail.html
@@ -5,7 +5,7 @@
 <section class="ftco-section ftco-no-pt bg-white" style="margin-top:4%">
     	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 heading-section text-start ftco-animate">
+			<div class="col-12 heading-section text-center ftco-animate">
 				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">{{property_name}}</h2>
 			</div>
 		</div>
