--- a/templates/blogs/blog_list.html
+++ b/templates/blogs/blog_list.html
@@ -12,7 +12,7 @@
   {% else %}
 
   <div class="container">
-    <h1 class="mt-5 mb-4" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Blog Posts</h1>
+    <h1 class="mt-5 mb-4 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Blog Posts</h1>
     <div class="row">
       {% for blog in blogs %}
       <div class="col-md-4">
