--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,27 @@
     <link rel="stylesheet" href="{% static 'css/flaticon.css' %}" />
     <link rel="stylesheet" href="{% static 'css/icomoon.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <style>
+        /* Add custom styles here if needed */
+        .image-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            align-content: stretch;
+            padding: 0;
+            list-style: none;
+            margin: 0;
+        }
+        .image-item {
+            flex: 1 1 calc(25% - 20px);
+            margin: 10px;
+            box-sizing: border-box;
+        }
+        .image-item img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+    </style>
   </head>
   <body>
     
