--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -40,7 +40,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md">
+      {% comment %} <div class="col-md">
         <div class="ftco-footer-widget mb-4">
           <h2 class="ftco-heading-2">Customer Support</h2>
           <ul class="list-unstyled">
@@ -50,7 +50,7 @@
             <li><a href="#" class="py-2 d-block">Contact Us</a></li>
           </ul>
         </div>
-      </div>
+      </div> {% endcomment %}
       <div class="col-md">
         <div class="ftco-footer-widget mb-4">
           <h2 class="ftco-heading-2">Have a Questions?</h2>
@@ -72,7 +72,7 @@
               <li>
                 <a href="#"
                   ><span class="icon icon-envelope"></span
-                  ><span class="text email-text">nareshjaiswani0777@gmail.com</span></a
+                  ><span class="text">nareshjaiswani0777@gmail.com</span></a
                 >
               </li>
             </ul>
@@ -84,10 +84,7 @@
       <div class="col-md-12 text-center">
         <p>
           Copyright &copy;
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          All rights reserved | This website is made by
+          2024 reserved | This website is made by
           <a href="https://virtualmodify.in" target="_blank">Virtual Modify</a>
         </p>
       </div>
