--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -30,13 +30,12 @@
         <div class="ftco-footer-widget mb-4 ml-md-5">
           <h2 class="ftco-heading-2">Information</h2>
           <ul class="list-unstyled">
-            <li><a href="#" class="py-2 d-block">About</a></li>
-            <li><a href="#" class="py-2 d-block">Services</a></li>
-            <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-            <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
-            <li>
-              <a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a>
-            </li>
+            <li><a href="{% url 'home:about_view' %}" class="nav-link">About US</a></li>
+            <li><a href="{% url 'assets:property_list' %}" class="nav-link">Properties</a></li>
+            <li><a href="{% url 'assets:project_list' %}" class="nav-link">Our Projects</a></li>
+            <li><a href="{% url 'home:infratech' %}" class="nav-link">Infratech</a></li>
+            <li><a href="{% url 'home:blog_list' %}" class="nav-link">Blog</a></li>
+            <li><a href="#" onclick="navigate('contact-us')" class="nav-link">Contact US</a></li>
           </ul>
         </div>
       </div>
