--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -28,7 +28,7 @@
       </div>
       <div class="col-md">
         <div class="ftco-footer-widget mb-4 ml-md-5">
-          <h2 class="ftco-heading-2">Information</h2>
+          <h2 class="ftco-heading-2" style="margin-bottom:10px;">Links</h2>
           <ul class="list-unstyled">
             <li><a href="{% url 'home:about_view' %}" class="nav-link">About US</a></li>
             <li><a href="{% url 'assets:property_list' %}" class="nav-link">Properties</a></li>
@@ -52,7 +52,7 @@
       </div> {% endcomment %}
       <div class="col-md">
         <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-heading-2">Have a Questions?</h2>
+          <h2 class="ftco-heading-2" style="margin-bottom:20px;">Have a Questions?</h2>
           <div class="block-23 mb-3">
             <ul>
               <li>
