--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -115,7 +115,7 @@
                 <div class="carousel-inner">
                     {% for plot_layout in plot_layouts %}
                     <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                        <img src="{{plot_layout.image.url}}" class="d-block w-100" alt="...">
+                        <img src="{{plot_layout.image.url}}" class="d-block w-100 rounded" alt="...">
                     </div>
                     {% endfor %}
                 </div>
@@ -132,8 +132,10 @@
             {% endif %}
             {% if location %}
             <div class="col-sm-12">
-                <h3 class="text text-center project-detail-hover" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Location</h3>
-                <iframe src="{{location}}" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h3 class="text text-center project-detail-hover " style="font-family: 'Nunito', sans-serif;font-weight: 900;">Location</h3>
+                <div class="d-flex justify-content-center">
+                    <img src="{{location.url}}" class="text-center rounded w-100" height="500vh" alt="">
+                </div>
             </div>
             {% endif %}
         </div>
